# efika-dist

./: CMakeLists.txt  EfikaConfig.cmake  EfikaConfig.cmake.in  README.md  conanfile.py
.github/workflows/: cmake.yml
test_package/: CMakeLists.txt  conanfile.py  example.cpp
